fix: YIM Graph Overflow Issue

--- a/frontend/css/year-in-music.less
+++ b/frontend/css/year-in-music.less
@@ -568,7 +568,7 @@
       overflow: hidden;
       .graph {
         color: var(--selectedColor);
-        overflow: auto;
+        overflow: scroll;
         > * {
           min-width: 550px;
         }
